<resources>
    <string name="app_name"></string>
    <string name="title_activity_home">HOME</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="ogrencievi">Öğrenci Evi</string>
    <string name="ba_lan">BAĞLAN</string>
    <string name="ev_ad">Ev Adı</string>
    <string name="ev_nickname">Ev Nickname</string>
    <string name="ifre">Şifre</string>
</resources>
