<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.example.aylin.ogrencievi2.EvOlusturnew">

    <EditText
        android:id="@+id/edtEvAdiOlustur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edtSifreOlustur"
        android:layout_alignLeft="@+id/edtSifreOlustur"
        android:layout_alignStart="@+id/edtSifreOlustur"
        android:layout_marginBottom="21dp"
        android:ems="10"
        android:hint="@string/ev_ad"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="54dp"
        tools:layout_editor_absoluteY="200dp" />

    <EditText
        android:id="@+id/edtEvNickNameOlustur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edtEvAdiOlustur"
        android:layout_alignLeft="@+id/edtSifreOlustur"
        android:layout_alignStart="@+id/edtSifreOlustur"
        android:layout_marginBottom="38dp"
        android:ems="10"
        android:hint="@string/ev_nickname"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="54dp"
        tools:layout_editor_absoluteY="200dp" />

    <EditText
        android:id="@+id/edtSifreOlustur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnBaglanOlustur"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="67dp"
        android:ems="10"
        android:hint="@string/ifre"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="54dp"
        tools:layout_editor_absoluteY="287dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="139dp"
        android:layout_height="47dp"
        android:layout_above="@+id/edtEvNickNameOlustur"
        android:layout_alignEnd="@+id/edtEvNickNameOlustur"
        android:layout_alignLeft="@+id/edtEvNickNameOlustur"
        android:layout_alignRight="@+id/edtEvNickNameOlustur"
        android:layout_alignStart="@+id/edtEvNickNameOlustur"
        android:layout_marginBottom="39dp"
        android:text="@string/ogrencievi"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="103dp"
        tools:layout_editor_absoluteY="53dp" />

    <Button
        android:id="@+id/btnBaglanOlustur"
        android:layout_width="121dp"
        android:layout_height="59dp"
        android:layout_marginBottom="102dp"
        android:background="@color/colorPrimary"
        android:text="@string/ba_lan"
        android:textColor="@android:color/white"
        tools:layout_editor_absoluteX="115dp"
        tools:layout_editor_absoluteY="385dp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/edtSifreOlustur"
        android:layout_alignStart="@+id/edtSifreOlustur"
        android:layout_marginLeft="34dp"
        android:layout_marginStart="34dp" />

</RelativeLayout>
